# yarukoto

./: AGENTS.md  README.md  biome.json  bun.lockb  lefthook.yml  package.json  requirements.md  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: coding-guidelines.md  gcp-setup.md  progress.md  tech-stack.md
scripts/: ultra-site.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/google_tasks/: mod.rs
src-tauri/src/models/: mod.rs  session.rs  task.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/storage/: mod.rs
src/app/: providers.tsx  router-context.ts  router.tsx  routes.tsx
src/app/__tests__/: app-shell.test.tsx
src/app/views/: app-layout.tsx
src/components/ui/: button.tsx
src/features/auth/api/: commands.ts
src/features/auth/hooks/: use-auth-session.ts
src/features/tasks/api/: task-service.ts
src/features/tasks/components/: task-list-panel.tsx  tasks-overview.tsx
src/features/tasks/hooks/: use-task-lists.ts  use-tasks.ts
src/lib/tanstack/: query-client.ts
src/styles/: tailwind.css
src/types/: tasks.ts
