[package]
name = "yarukoto"
version = "0.1.0"
description = "Yarukoto desktop client"
authors = ["iemong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["config-default"] }
tauri-plugin-opener = "2"
axum = { version = "0.7", features = ["macros"] }
portpicker = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
oauth2 = { version = "4", features = ["reqwest", "rustls-tls", "pkce-plain"] }
thiserror = "1"
